# agent

./: .env  .gitignore  main.py  pyproject.toml
basic/: ch1.ipynb  chain_with_custom_runnable.ipynb  reactagent.ipynb  ||_chain.ipynb
project/: reactagent.ipynb
react_db_agent/: demmo.py  inti_db.py  react_DB.ipynb
react_db_agent/sDB/: Sales.db
